Bug 407687 - Discover does not apply correctly icon themes installed from KDE Store
Summary: Discover does not apply correctly icon themes installed from KDE Store
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-18 13:11 UTC by Patrick Silva
Modified: 2019-12-10 13:33 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.66
Sentry Crash Report:


Attachments
screenshot (117.18 KB, image/png)
2019-05-18 13:11 UTC, Patrick Silva
Details
"Use" button in GHNS window (98.48 KB, image/png)
2019-11-27 16:46 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-05-18 13:11:21 UTC
Created attachment 120166 [details]
screenshot

SUMMARY
This bug can be reproduced with the following icon themes:
Tela-icon-theme
Korla icon theme
McMojave-circle

STEPS TO REPRODUCE
1. open Discover
2. click "Plasma addons" in the side bar
3. set "Sort" to "Rating"
4. click on any icon theme mentioned above to open its description page
5. click "Install" button in the upper right corner
6. when installation is complete, click "Use" button in the upper right corner
7. open Dolphin 

OBSERVED RESULT
As we can see in the attached screenshot, the icon theme is not applied correctly. Several icons are missing in Dolphin.
And if you open Icon kcm, you will notice that no icon theme is selected.


EXPECTED RESULT
the icon theme is applied correctly.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.90
KDE Frameworks Version: 5.58.0
Qt Version: 5.13.0 beta3


ADDITIONAL INFORMATION
also reproducible on neon dev unstable
Comment 1 Dan Leinir Turthra Jensen 2019-05-22 08:02:28 UTC
Hmm... Just looking at the code it seems sensible enough to me. Could i convince you to run the kcm from a command line (kcmshell5 kcm_icons) and paste the output here? I have a suspicion something could be wrong with the adoption command...
Comment 2 Patrick Silva 2019-05-23 02:15:01 UTC
Here is the output

org.kde.kcoreaddons: Error loading plugin "kcm_icons" "The shared library was not found." 
Plugin search paths are ("/usr/lib/x86_64-linux-gnu/qt5/plugins", "/usr/bin") 
The environment variable QT_PLUGIN_PATH might be not correctly set
qt.svg: /home/stalker/.local/share/icons/McMojave-circle/places/48/user-trash.svg:66: Could not resolve property: b
qt.svg: /home/stalker/.local/share/icons/McMojave-circle/places/48/user-trash.svg:66: Could not resolve property: c
qt.svg: /home/stalker/.local/share/icons/McMojave-circle-dark/places/48/user-trash.svg:66: Could not resolve property: b
qt.svg: /home/stalker/.local/share/icons/McMojave-circle-dark/places/48/user-trash.svg:66: Could not resolve property: c
Comment 3 Nate Graham 2019-05-23 16:46:38 UTC
Information was provided.
Comment 4 Patrick Silva 2019-11-27 16:46:05 UTC
Created attachment 124144 [details]
"Use" button in GHNS window

icon theme also is not correctly applied if I click on "Use" button available when we click on the arrow beside "Uninstall" button in GHNS window.
Comment 5 Dan Leinir Turthra Jensen 2019-12-03 11:49:02 UTC
Right, i can at least reproduce it... Thank you for the report :)
Comment 6 Dan Leinir Turthra Jensen 2019-12-10 13:26:41 UTC
Git commit 709944d6cb5cf843e73d32f36b480b49876e9623 by Dan Leinir Turthra Jensen.
Committed on 10/12/2019 at 13:26.
Pushed by leinir into branch 'master'.

Support archive installs with adoption commands

Summary:
This previously caused any icon pack installed through the store to
not function when the adoption command pointed at a directory rather
than a file.

Test Plan:
Previously: Using the "Use" option in either the Icons KCM or Discover with any icon pack would cause there to be no icon theme set

With patch: Correctly switches to the newly installed icon set

Reviewers: #frameworks, #plasma, #knewstuff, apol, ngraham

Reviewed By: apol

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D25824

M  +22   -5    src/core/engine.cpp

https://commits.kde.org/knewstuff/709944d6cb5cf843e73d32f36b480b49876e9623