Support archive installs with adoption commands

Summary:
This previously caused any icon pack installed through the store to
not function when the adoption command pointed at a directory rather
than a file.

BUG:407687

Test Plan:
Previously: Using the "Use" option in either the Icons KCM or Discover with any icon pack would cause there to be no icon theme set

With patch: Correctly switches to the newly installed icon set

Reviewers: #frameworks, #plasma, #knewstuff, apol, ngraham

Reviewed By: apol

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D25824